# dev_board_api_rust

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.aws  Dockerfile.local  LICENSE  README.md  config.toml  db.sql  docker-compose-aws.yml  docker-compose-dbms.yml  docker-compose-local.yml  docker-compose-postgres.yml  docker-compose-production.yml  docker-compose.yml  log4rs.yml
.github/workflows/: codeql.yml
configuration/: Production.toml  default.json  development.json  production.json  production_aws.json  production_local.json
entity/src/: db_column.rs  db_column_items.rs  db_item.rs  db_items.rs  lib.rs  post.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20221027_000001_create_table_db_column.rs  m20221027_000001_create_table_db_item.rs
postgres-data/: postmaster.pid
postgres-data/global/: 1260  pg_control  pg_internal.init
src/: AuthenticationUtil.rs  ConfigurationDatabase.rs  ConfigurationLoader.rs  ControllerApp.rs  ControllerAuth.rs  ControllerColumn.rs  ControllerCommon.rs  ControllerItem.rs  ControllerPermission.rs  ControllerRole.rs  ControllerUser.rs  DaoColumn.rs  DaoCommon.rs  DaoItem.rs  DaoPermission.rs  DaoRole.rs  DaoUser.rs  DatabaseConfig.rs  ErrorStructs.rs  MapperColumn.rs  PermissionUtil.rs  RoutesColumn.rs  RoutesItem.rs  RoutesPermission.rs  RoutesRole.rs  RoutesUser.rs  Structs.rs  controller_column.rs  controllercolumn.rs  dao_column.rs  daocolumn.rs  database_config.rs  db.rs  dbconfig.rs  handler.rs  handler_column.rs  lib.rs  main.rs  mod.rs  model.rs  (+4 more)
src/configuration/: config_database.rs  config_loader.rs  config_logging.rs  development.json  mod.rs
src/controller/: ControllerAuth.rs  ControllerColumn.rs  ControllerCommon.rs  ControllerItem.rs  ControllerPermission.rs  ControllerRole.rs  ControllerUser.rs  controller_attachment.rs  controller_auth.rs  controller_board.rs  controller_column.rs  controller_common.rs  controller_common_deprecated.rs  controller_generic.rs  controller_item.rs  controller_message.rs  controller_permission.rs  controller_role.rs  controller_user.rs  mod.rs
src/dao/: DaoColumn.rs  DaoItem.rs  DaoPermission.rs  DaoRole.rs  DaoUser.rs  dao_attachment.rs  dao_board.rs  dao_column.rs  dao_common.rs  dao_generic.rs  dao_item.rs  dao_message.rs  dao_permission.rs  dao_role.rs  dao_user.rs  mod.rs
src/entity/: Cargo.toml
src/migration/: Cargo.toml
src/route/: RoutesColumn.rs  RoutesItem.rs  RoutesPermission.rs  RoutesRole.rs  RoutesUser.rs  mod.rs  routes_attachment.rs  (+9 more)
test/: postman.json
(+111 files in other folders)
