[package]
name = "dev-board"
author = "Andrei Dodu"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"]  }
warp = "0.3.3"
serde_json = "1.0.87"
serde = {version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log4rs="1.2.0"
log = "0.4.17"  
dotenv = "0.15.0"
entity = { path = "entity" }
migration = { path = "migration" }
lazy_static="1.4.0"
async_once="0.2.6"

[workspace]
members = [".", "entity", "migration"]

[dependencies.sea-orm]
version = "0.10.0"
features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ]
default-features = false